tests/invalid/Return_Invalid_1.whiley
function f() -> bool:
    return 1
